testcases/error/invalid_mixin_not_interface.veryl
module invalid_mixin_not_interface_module {}
interface invalid_mixin_not_interface {
    mixin invalid_mixin_not_interface_module;
}
